test/type/wrong/hr5.kk.out
test/type/wrong/hr5.kk(3,13): error: types do not match
 context : ids : forall<a> list<forall<b> b -> a>
 term : ids
 inferred type: list<forall<a> (a) -> a>
 expected type: forall<a> list<forall<b> (b) -> a>
 because : type cannot be instantiated to match the annotation