test/type/wrong/hr5.kk
val ids = [id : forall<a> a -> a]

val ids2 = (ids : forall<a> list<forall<b> b -> a>)